--- a/Aplicacoes.html
+++ b/Aplicacoes.html
@@ -120,8 +120,8 @@
 
 		</tr>
 		<tr><td><button><a href=Aplicacoes/Aplicacoes_Quadratica.html>Função Quadrática</a></button></td></tr>
-		<tr><td><button><a href=>Função Exponencial</a></button></td></tr>
-		<tr><td><button><a href=>Função Logarítmica</a></button></td></tr>
+		<tr><td><button><a href=Aplicacoes/Aplicacoes_Exponencial.html>Função Exponencial</a></button></td></tr>
+		<tr><td><button><a href=Aplicacoes/Aplicacoes_logaritmica.html>Função Logarítmica</a></button></td></tr>
 		
 <br>
 
